Fixed button color error on Safari

--- a/logem.css
+++ b/logem.css
@@ -97,7 +97,7 @@ p{
     padding: 5px;
     transition-timing-function: ease-in-out;
     font-family: 'Quicksand', sans-serif;
-
+    color: #000;
 
 }
 
